--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.1.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
