--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.2",
     "gray-matter": "^4.0.3",
     "marked": "^4.1.1",
     "next": "13.0.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
   },
