--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6"
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^5.3.6",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
