--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Deploy Next.js site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: [master]
+    branches: [edo]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,6 +26,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: cd public/packages/
+      - name: Clone qibo repository
+        uses: actions/checkout@v2
+        with:
+          repository: qiboteam/qibo
+      - name: Deploy documentation
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[docs]
+          sudo apt install pandoc
+          cd doc
+          make html
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -58,8 +70,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./out
-
+          path: ./pages
   # Deployment job
   deploy:
     environment:
