--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,17 +27,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: cd public/packages/
-      - name: Clone qibo repository
-        uses: actions/checkout@v2
-        with:
-          repository: qiboteam/qibo
-      - name: Deploy documentation
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[docs]
-          sudo apt install pandoc
-          cd doc
-          make html
+      #- name: Clone qibo repository
+      #  uses: actions/checkout@v2
+      #  with:
+      #    repository: qiboteam/qibo
+      #- name: Deploy documentation
+      #  run: |
+      #    python -m pip install --upgrade pip
+      #    pip install .[docs]
+      #    sudo apt install pandoc
+      #    cd doc
+      #    make html
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
