--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,17 +27,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: cd public/packages/
-      #- name: Clone qibo repository
-      #  uses: actions/checkout@v2
-      #  with:
-      #    repository: qiboteam/qibo
-      #- name: Deploy documentation
-      #  run: |
-      #    python -m pip install --upgrade pip
-      #    pip install .[docs]
-      #    sudo apt install pandoc
-      #    cd doc
-      #    make html
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -61,6 +50,17 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+      - name: Clone qibo repository
+        uses: actions/checkout@v2
+        with:
+          repository: qiboteam/qibo
+      - name: Deploy documentation
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[docs]
+          sudo apt install pandoc
+          cd doc
+          make html
       - name: Install dependencies
         run: yarn install
       - name: Build with Next.js
@@ -70,7 +70,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./pages
+          path: ./out
   # Deployment job
   deploy:
     environment:
