--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Deploy documentation
         run: |
           python -m pip install --upgrade pip
+          pwd #TODO:delete 
+          ls -a #TODO:delete 
           cd ./public/packages/qibo/doc
           pip install .[docs]
           sudo apt install pandoc
