--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: |
+          git submodules init
+          git submodules update
+      - name: Clone qibo repository
+        uses: actions/checkout@v2
+        with:
+          repository: qiboteam/qibo
+
+      - name: Deploy documentation
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[docs]
+          sudo apt install pandoc
+          cd doc
+          make html
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
