--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with: 
+          submodules: True
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -49,24 +51,28 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+      
+      - name: Clone qibo repository
+        uses: actions/checkout@v2
+        with:
+          repository: qiboteam/qibo
+          clean: False
+          path: public/packages/
+
+      - name: Deploy documentation
+        run: |
+          python -m pip install --upgrade pip
+          cd public/packages
+          pip install .[docs]
+          sudo apt install pandoc
+          cd doc
+          make html
       - name: Install dependencies
         run: yarn install
       - name: Build with Next.js
         run: yarn build
       - name: Static HTML export with Next.js
         run: yarn next export
-      - name: Clone qibo repository
-        uses: actions/checkout@v2
-        with:
-          repository: qiboteam/qibo
-
-      - name: Deploy documentation
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[docs]
-          sudo apt install pandoc
-          cd doc
-          make html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
