--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,6 +63,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           cd public/packages
+          ls -a #TODO: remove 
           pip install .[docs]
           sudo apt install pandoc
           cd doc
