--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Deploy documentation
         run: |
           python -m pip install --upgrade pip
+          ls -a #TODO: remove
           cd public/packages
           ls -a #TODO: remove 
           pip install .[docs]
