modify path in qibo cloning

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           repository: qiboteam/qibo
           clean: False
-          path: public/packages/
+          path: public/packages/qibo
 
       - name: Deploy documentation
         run: |
