--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -69,6 +69,20 @@ jobs:
           sudo apt install pandoc
           cd doc
           make html
+      - name: Clone qibocal repository
+        uses: actions/checkout@v2
+        with:
+          repository: qiboteam/qibocal
+          clean: False
+          path: public/packages/qibocal
+
+      - name: Deploy documentation
+        run: |
+          cd public/packages/qibocal
+          ls -a #TODO: remove 
+          pip install .[docs]
+          cd doc
+          make html
       - name: Install dependencies
         run: yarn install
       - name: Build with Next.js
