--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,6 +65,7 @@ jobs:
           ls -a public/packages #TODO: remove
           ls -a public/packages/qibo #TODO: remove
           ls -a public/packages/qibocal  #TODO: remove
+          ls -a public/packages/qibocal/serverscripts/web/  #TODO: remove
           cd public/packages/qibo
           pip install .[docs]
           sudo apt install pandoc
