add symbolic link command

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,7 +82,7 @@ jobs:
           rm public/packages/qibocal/src/qibocal/web/static/styles.css # TODO: change file in a PR
           ln -s public/packages/qibocal/src/qibocal/web/static/styles.css styles.css # TODO: change file in a PR
           ln -s public/packages/qibocal/src/qibocal/web/static/styles.css styles.css # TODO: change file in a PR
-          ln styles/styles.css
+          ln -s styles/styles.css style.css
           cd public/packages/qibocal
           pip install .[docs]
           cd doc
