--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -81,6 +81,7 @@ jobs:
         run: |
           rm public/packages/qibocal/src/qibocal/web/static/styles.css # TODO: change file in a PR
           ln -s public/packages/qibocal/src/qibocal/web/static/styles.css styles.css # TODO: change file in a PR
+          ln -s styles/styles.css styles.css
           ls styles #TODO: remove
           cd public/packages/qibocal
           pip install .[docs]
