--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/ubuntu": "^4.5.11",
     "@next/mdx": "^13.0.4",
     "@types/mdx": "^2.0.3",
     "babel-plugin-styled-components": "^2.0.7",
