--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,10 @@
 name: Deploy Next.js site to Pages
 
-
-on: 
+on:
   workflow_dispatch:
   push:
-      branches: [master,new_workflow]
-  
-jobs:
+    branches: [master, new_workflow]
 
+jobs:
   publish:
-    uses: qibogang/workflows/.github/workflows/publish-next-on-ghpages.yml@main
+    uses: qiboteam/workflows/.github/workflows/publish-next-on-ghpages.yml@main
